Sets button sizes correctly on mobile browsers

--- a/style.css
+++ b/style.css
@@ -69,10 +69,13 @@ body {
   top: 50%;
   transform: translate(0, -50%);
   border-radius: 100% / 50%;
+  height: 83px;
+  width: 41.5px;
 
   background-color: rgba(255, 255, 255, 0.2);
   color: white;
   font-family: 'Josefin Sans', sans-serif;
+  font-size: 20.8px;
   z-index: 10;
   text-decoration: none;
   border: none;
@@ -91,23 +94,34 @@ body {
 }
 
 .left-arrow {
-  padding-left: 1px;
-  font-size: 27px;
-  height: 108px;
-  width: 54px;
   left: 0%;
+  text-align: left;
+  padding-left: 8.5px;
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
 }
 
 .right-arrow {
-  text-align: right;
-  padding-right: 21px;
-  font-size: 52px;
-  height: 208px;
-  width: 104px;
   right: 0%;
+  text-align: right;
+  padding-right: 8.5px;
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
 }
 
+@media (min-width: 700px) {
+  .left-arrow {
+    padding-left: 11px;
+    font-size: 27px;
+    height: 108px;
+    width: 54px;
+  }
+
+  .right-arrow {
+    text-align: right;
+    padding-right: 21px;
+    font-size: 52px;
+    height: 208px;
+    width: 104px;
+  }
+}
